# vivere-con-il-cane

./: .env.example  .gitignore  AI_GENERATOR.md  CONTRIBUTING.md  DATABASE.md  Dockerfile  GOOGLE_AUTH_SETUP.md  GOOGLE_OAUTH_COMPLETE_GUIDE.md  LICENSE  PIANO_SVILUPPO.md  Procfile  README.it.md  README.md  WORKFLOW.md  all_data.json  app.py  apt.txt  compile_po_manual.py  db.sqlite3  debug_302.py  debug_i18n_active.py  debug_peaks.py  debug_start.py  default_6.sqlite3  detailed_debug.py  docker-compose.yml  ecosystem.config.js  extract_strings.py  heart_analysis_report.txt  kilo.json  manage.py  pyproject.toml  render.yaml  requirements.txt  run.py  run.sh  runtime.txt  serve.py  simple_server.py  start.py  (+19 more)
.kilo/command/: build.md
.kilo/plans/: 1776014109027-gentle-cabin.md
.vercel/: build-env  build.sh
blog/: admin.py  ai_generator.py  api.py  models.py  sitemap.py  test_ai_generator.py  tests.py  urls.py  views.py
blog/fixtures/: blog_data.json
blog/migrations/: 0001_initial.py  0003_blogpost_meta_description.py  (+3 more)
canine_tools/: apps.py  models.py  test_views.py  tests.py  urls.py  views.py  views.py.new
community/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  test_signals.py  tests.py  urls.py  views.py
config/: celery.py  run.py  serve.py  settings.py  urls.py  wsgi.py
dog_profile/: __init__.py  admin.py  apps.py  models.py  test_views_comprehensive.py  tests.py  urls.py  views.py
knowledge/: admin.py  models.py  test_views.py  tests.py  urls.py  views.py
marketing/: admin.py  models.py  test_views.py  views.py
static/: manifest.json  robots.txt  service-worker.js
templates/: base.html  home.html  robots.txt
(+105 files in other folders)
