[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vivere-con-il-cane"
version = "0.1.0"
dependencies = [
    "Django>=4.2,<6.1",
    "Pillow>=10.0,<11.0",
    "whitenoise>=6.0",
    "gunicorn>=21.0",
    "python-dotenv>=1.0.0",
    "django-allauth>=65.0",
]