[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vivere-con-il-cane"
version = "0.1.0"
description = "Vivere con il Cane - Django project"
requires-python = ">=3.11"
dependencies = [
    "Django>=4.2,<6.1",
    "Pillow>=10.0,<11.0",
    "whitenoise>=6.0",
    "gunicorn>=21.0",
    "python-dotenv>=1.0.0",
    "django-allauth>=64.0,<66.0",
    "requests>=2.31.0",
    "xhtml2pdf>=0.2.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]